Change grid styling. Add info div to map. Fix path gaps.

--- a/assets/scss/hardiness.scss
+++ b/assets/scss/hardiness.scss
@@ -75,18 +75,35 @@ img {
     shape-rendering: crispEdges;
 }
 
+.info {
+    padding: 0 10px;
+    background: #ffffff91;
+    border-radius: 100px;
+    box-shadow: 0 0 15px 10px #ffffff69;
+}
+
+.content-ctr {
+    max-width: 1200px;
+    padding: 2rem 1rem;
+    margin: 0 auto;
+
+    h2 {
+        font-size: 2.5rem;
+        text-align: center;
+    }
+}
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, minmax(200px, 400px));
-    grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 15px;
     justify-content: center;
-    padding: 20px;
+    padding: 2rem 0;
 
     .plant {
         display: grid;
-        grid-template-rows: min-content min-content 1fr;
-        border-radius: 10px;
+        grid-template-columns: 33% 1fr;
+        border-radius: 3px;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
         overflow: hidden;
@@ -94,9 +111,22 @@ img {
         &:hover {
             box-shadow: 0 3px 6px rgba(156, 11, 11, 0.16), 0 3px 6px rgba(0,0,0,0.23);
         }
-        .details {
+        .img-ctr {
             position: relative;
-            padding: .5rem 1rem;
+            overflow: hidden;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                max-width: max-content;
+                height: 100%;
+                transform: translate(-50%, -50%);
+            }
+        }
+        .details {
+            display: grid;
+            padding: .25rem 1rem;
         }
         .label {
             margin-right: 10px;
@@ -108,7 +138,7 @@ img {
         .button {
             display: block;
             align-self: end;
-            margin-bottom: 1rem;
+            margin-bottom: .75rem;
             margin-right: 1rem;
             color: cornflowerblue;
             font-weight: bold;
@@ -121,6 +151,7 @@ img {
             }
         }
         .title {
+
             a {
                 color: #000;
                 text-decoration: none;
